style.css
/* ... */
.action-box .action-title {
  width: 360px;
  height: 50px;
  /* font-family: CapitoliumNews2; */
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: -0.2px;
  text-align: center;
  color: #05050a;
}

.action-box .action-description {
  /* width: 340px; */
  height: 108px;
  font-family: proxima_novalight;
  font-size: 24px;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.5;
  letter-spacing: normal;
  text-align: center;
  color: #9696a0;
  margin-top: 40px;
}

.action-box .action-button {
  width: 290px;
  height: 60px;
  background-color: #171717;
  font-family: proxima_novasemibold;
  font-size: 13px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.54;
  letter-spacing: 0.8px;
  color: #ffffff;
  border: none;
  margin-top: 80px;
  text-align: left;
  padding-left: 25px;
}

.action-box:hover {
  cursor: pointer;
  border-top: 1px solid #868686;
  box-shadow: unset;
}

.action-box:hover .action-button {
  background-color: #868686;
}

.marketplace {
  background-image: url('./assets/Caption-Photo@2x.png');
  height: 720px;
  width: 100%;
  margin-top: 120px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  margin-bottom: 150px;
}

.marketplace .description {
  width: 1024px;
  height: 320px;
  background-color: rgba(23, 23, 23, 0.8);
  display: flex;
  align-items: center;
  padding-left: 100px;
}

.marketplace .description span {
  width: 570px;
  height: 100px;
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: 0.2px;
  color: #ffffff;
}

.our-approach {
  width: 100%;
  box-shadow: inset 0 -1px 0 0 #f3f3f3;
  display: flex;
  align-items: flex-start;
  position: relative;
}

.our-approach .left-pane {
  width: 825px;
  background-color: white;
  display: flex;
  /* align-items: center; */
  flex-direction: column;
}

.our-approach .left-pane .scroll-content {
  display: none;
}

.our-approach .left-pane .scroll-content.active {
  display: block;
}

.our-approach .right-menu {
  width: 100%;
  height: 710px;
  background-color: #f3f3f3;
  display: flex;
  align-items: center;
}

.our-approach .right-menu.fixed {
  position: fixed;
  width: 849px;
  top: 140px;
  right: 0;
}

.our-approach .right-menu.absolute {
  position: absolute;
  width: 849px;
  right: 0;
  bottom: 0;
}

.our-approach .right-menu ul {
  width: 100%;
}

.our-approach .right-menu ul li {
  width: 100%;
  height: 90px;
  font-family: proxima_novaregular;
  font-size: 16px;
  padding-left: 130px;
  display: flex;
  align-items: center;
  cursor: pointer;
  color: rgba(134, 134, 134, 0.7);
}

.our-approach .right-menu ul li.selected {
  font-family: proxima_novasemibold;
  background-color: #ffffff;
  box-shadow: 20px 15px 45px 0 rgba(23, 23, 23, 0.1);
  color: #171717;
}

.our-approach .left-pane .title {
  height: 100px;
  margin-top: 50px;
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: -0.2px;
  color: #05050a;
}

.approach-content {
  padding-right: 350px;
  width: 800px;
}

.our-approach .our-approach-title {
  font-family: proxima_novasemibold;
  margin-top: 165px;
}

.approach-content .description {
  height: 144px;
  font-family: proxima_novalight;
  font-size: 24px;
  margin-top: 56px;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.5;
  letter-spacing: normal;
  color: #9696a0;
}

.our-approach-mobile {
  display: none;
}

.our-team {
  margin-top: 250px;
}

.our-team .team-description {
  width: 620px;
  height: 104px;
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.63;
  letter-spacing: 0.2px;
  color: #05050a;
}

.our-team .team-members {
  margin-top: 120px;
}

.our-team .team-members>span {
  width: 123px;
  height: 20px;
  font-family: proxima_novasemibold;
  font-size: 14px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.43;
  letter-spacing: 0.6px;
  color: #171717;
}

.our-team .team-members .profiles {
  min-height: 520px;
  display: flex;
  flex-wrap: wrap;
}

.profiles-mobile {
  display: none;
}

.our-team .team-members .profiles .profile {
  width: 200px;
  height: 520px;
  margin-top: 60px;
  margin-right: 43px;
  position: relative;
}


.our-team .team-members .profiles .profile .team-members-grey-bg {
  width: 1000%;
  height: 400px;
  background: #f3f3f3;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

.profile img {
  width: 200px;
  height: 400px;
  background-color: #d2d2d2;
  /* margin-right: 30px; */
}

.profile .profile-name {
  width: 270px;
  margin-top: 60px;
  display: flex;
  flex-direction: column;
  margin-right: 38px;
}

.profile .profile-name .full-name {
  font-family: proxima_novasemibold;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.25;
  letter-spacing: normal;
  color: #171717;
}

.profile .profile-name .role {
  font-family: proxima_novaregular;
  font-size: 16px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.75;
  letter-spacing: normal;
  color: #9696a0;
  margin-top: 10px;
}

.owner-signup {
  width: 100%;
  height: 720px;
  padding: 100px;
  background-image: url('assets/Footer_Img@2x.png');
  background-size: cover;
  margin-top: 200px;
  margin-bottom: -240px;
}

.owner-signup .tags {
  display: flex;
  margin-bottom: 90px;
}

.owner-signup .tags li {
  opacity: 0.4;
  font-family: proxima_novasemibold;
  font-size: 14px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.43;
  letter-spacing: 0.6px;
  text-align: center;
  color: #ffffff;
  margin-right: 50px;
  cursor: pointer;
}
/* ... */

